2024-05-14T08:12:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9075987661 # 271
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-14
* notice: last 14d: unq all: 41 59
* notice: prev accum: outdated-unq outdated-all / unq all: 3278 7595 / 3350 7697
* notice: next accum: outdated-unq outdated-all / unq all: 3278 7595 / 3351 7698
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -24 -44 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-30 2024-05-14]

2024-05-14T00:40:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9071851445 # 270
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-14
* notice: last 14d: unq all: 62 102
* notice: prev accum: outdated-unq outdated-all / unq all: 3278 7595 / 3348 7695
* notice: next accum: outdated-unq outdated-all / unq all: 3278 7595 / 3350 7697
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +10 +12 -0 -0 / 10 12
* notice: removed / changed dates: [] / [2024-05-13]

2024-05-13T16:11:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9066232448 # 269
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-13
* notice: last 14d: unq all: 60 100
* notice: prev accum: outdated-unq outdated-all / unq all: 3278 7595 / 3340 7685
* notice: next accum: outdated-unq outdated-all / unq all: 3278 7595 / 3348 7695
* notice: prev exec diff / last date diff / accum: unq all: +8 +10 -0 -0 / +8 +10 -0 -0 / 8 10
* notice: removed / changed dates: [] / [2024-05-13]

2024-05-12T16:10:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9052649047 # 266