@@ -1,12 +1,7 @@
 {
-  "count": 59,
-  "uniques": 41,
+  "count": 48,
+  "uniques": 32,
   "clones": [
-    {
-      "timestamp": "2024-04-30T00:00:00Z",
-      "count": 12,
-      "uniques": 10
-    },
     {
       "timestamp": "2024-05-02T00:00:00Z",
       "count": 15,
@@ -44,7 +39,7 @@
     },
     {
       "timestamp": "2024-05-14T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
